--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        	<ul class="stars text-muted">
+        		<li><i class="fa fa-star highlight"></i></li>
+        		<li><i class="fa fa-star highlight"></i></li>
+        		<li><i class="fa fa-star highlight"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
