--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         		<li><i class="fa fa-star highlight"></i></li>
         	</ul>
 
-        	<span class="moves"></span>
+            <span class="moves">0 Moves</span>
+            
+            <span class="timer">Timer</span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -81,6 +83,7 @@
         </ul>
     </div>
 
+    <script src="js/stopwatch.js"></script>  
     <script src="js/deck.js"></script>
     <script src="js/app.js"></script>
 </body>
