--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         		<li><i class="fa fa-star highlight"></i></li>
         	</ul>
 
-            <span class="moves">0 Moves</span>
+            <span class="moves"></span>
             
-            <span class="timer">Timer</span>
+            <span class="timer"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -83,6 +83,7 @@
         </ul>
     </div>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/stopwatch.js"></script>  
     <script src="js/deck.js"></script>
     <script src="js/app.js"></script>
